Fri May  1 18:17:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Only add the arg from vx_execae when the string has data.

Fri May  1 17:46:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          If table_size equals zero we fail directly

Fri May  1 17:29:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Default_Constants.h:
          Made sure ACE_DEFAULT_TIMERS is defined and not zero

Fri May  1 12:27:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Default_Constants.h:
          ACE_DEFAULT_MAP_SIZE and ACE_DEFAULT_TIMERS shouldn't be zero

Fri May  1 12:19:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INET_Addr_Test_IPV6.cpp:
          No need for ACE_UNUSED_ARG

        * tests/Map_Manager_Test.cpp:
          Use ACE_TEST_ASSERT and added some more checks

        * tests/test_config.h:
          Removed ghs workaround and check return value of log_msg open
          call

Fri May  1 11:43:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.cpp:
          Initialise members in the ACE_Notification_Buffer constructor

        * ace/Log_Record.h:
          Doxygen fix

        * ace/Notification_Queue.cpp:
          Layout change

        * ace/Select_Reactor_Base.cpp:
          Small code simplification

Fri May  1 09:13:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          opt files are allowed in svn

        * bin/make_release.py:
          Don't generate Pocket PC 2003 and Smartphone 2003 projects

Fri May  1 07:37:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-rpmlintrc.txt:
          Fixed line wrapper

        * rpmbuild/ace-tao.txt:
          Removed, we are not maintaining this file anymore

        * rpmbuild/README:
          Small updates

Fri May  1 07:31:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
